--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* 
-Theme Name: Hello Elementor Child
+Theme Name: Hello Elementor Child for butlersigns.uk
 Theme URI: https://github.com/elementor/hello-theme-child/
-Description: Hello Elementor Child is a child theme of Hello Elementor, created by Elementor team
+Description: Hello Elementor Child is a child theme of Hello Elementor, created by Elementor team. Edited by Lester R
 Author: Elementor Team
 Author URI: https://elementor.com/
 Template: hello-elementor
